tests/snapshots/cli_recover__a_second_ricepilot_exits_locked_rather_than_queueing.snap
---
source: tests/cli_recover.rs
expression: r.stderr
---
ricepilot: another ricepilot holds <HOME>/.run/ricepilot.lock
