tests/snapshots/cli_recover__nothing_to_recover_on_a_healthy_machine.snap
---
source: tests/cli_recover.rs
expression: r.stdout
---
no switch is in flight: there is no journal at `state/journal/current.toml`.
nothing to recover, and nothing has been changed.
