tests/snapshots/cli_recover__recover_commit_abandons_a_switch_that_never_started.snap
---
source: tests/cli_recover.rs
expression: r.stdout
---
recover: an interrupted switch to profile `new` (20260921T101112Z)

observed:
  old            <HOME>/.config/hypr
  old            <HOME>/.config/foot
  old            <HOME>/.config/btop

direction: backward — no exchange had happened yet, so the switch never started. The staged links
            go to the attic; nothing that was live is touched.

applied 3 operation(s):
  to attic     <HOME>/.config/hypr.rp-tmp-0 -> <attic><HOME>/.config/hypr.staged
  fsync dir    <HOME>/.config
  fsync dir    <HOME>/.local/state/ricepilot/attic/20260921T101112Z

recovered. every destination is now on one side of the switch, and the journal has
been retired to `state/journal/done-20260921T101112Z.toml`.
displaced links are in `state/attic/20260921T101112Z/`; nothing was removed.
