tests/snapshots/cli_recover__recover_is_dry_run_by_default.snap
---
source: tests/cli_recover.rs
expression: r.stdout
---
recover: an interrupted switch to profile `new` (20260921T101112Z)

observed:
  new            <HOME>/.config/hypr
  old            <HOME>/.config/foot
  old            <HOME>/.config/btop

direction: forward — at least one destination is already switched, so finishing is the only outcome
           that does not undo something already in effect.

would apply 6 operation(s):
  to attic     <HOME>/.config/hypr.rp-tmp-0 -> <attic><HOME>/.config/hypr
  exchange     <HOME>/.config/foot <-> <HOME>/.config/foot.rp-tmp-1
  to attic     <HOME>/.config/foot.rp-tmp-1 -> <attic><HOME>/.config/foot
  create link  <HOME>/.config/btop -> <HOME>/rice/new/btop
  fsync dir    <HOME>/.config
  fsync dir    <HOME>/.local/state/ricepilot/attic/20260921T101112Z

nothing has been changed. re-run with --commit to carry this out.

with --commit it then records what the interrupted switch did not get to: the new generation,
the ledger rows that make the new links ricepilot's, and `rescue.sh` — before the journal
is retired.
